Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53115

qtquickcontrols Tests_TabView::test_mousePressOnTabBar() fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.8.0
    • 5.8.0 Alpha
    • Quick: Controls 1
    • RHEL 6.6, Ubuntu 14.04, OS X 10.09

    Description

       ********* Start testing of qtquickcontrols *********
       Config: Using QtTest library 5.8.0, Qt 5.8.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 4.9.1 20140922 (Red Hat 4.9.1-10))
       PASS   : qtquickcontrols::Tests_TabView::initTestCase()
       FAIL!  : qtquickcontrols::Tests_TabView::test_mousePressOnTabBar() 'verify()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols/tests/auto/controls/data/tst_tabview.qml(411)]
       PASS   : qtquickcontrols::Tests_TabView::cleanupTestCase()
       Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 448ms
       ********* Finished testing of qtquickcontrols *********
      

      http://testresults.qt.io/logs/qt/qtquickcontrols/34fbd06f1b678375817badf33e87a43705c8d8f7/LinuxRHEL_6_6x86_64LinuxRHEL_6_6x86_64GCCRelease_NoUseGoldLinker/03310f27661644951aef6d81bcf3cbe71932919a/testrun_1461562893/testlog.txt.gz

      Attachments

        For Gerrit Dashboard: QTBUG-53115
        # Subject Branch Project Status CR V

        Activity

          People

            shausman Simon Hausmann
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes